--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
+:root {
+  --color-black: #000000;
+  --color-primary: #34547a;
+  --color-secondary: #727272;
+  --color-gray-light: #eeeff1;
+  --color-white: #ffffff;
+
+  --font-size: 16px;
+  --font-family: "Roboto", sans-serif;
+  --letter-spacing: 0.1em;
+
+  --line-height-lg: 1.625;
+  --line-height-sm: 1.1111111111111111111;
+
+  --contaner-primary: 1110px;
+  --contaner-small: 540px;
+}
 *,
 *::before,
 *::after {
@@ -6,13 +23,69 @@
   padding: 0;
 }
 html {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-family: var(--font-family);
+  font-size: var(--font-size);
 }
 a {
   text-decoration: none;
 }
+
 .container {
-  width: min(100% - 40px, 1340px);
+  width: min(100% - 40px, var(--contaner-primary));
   margin-inline: auto;
+}
+
+.header {
+  background-color: var(--color-gray-light);
+  padding-top: 76px;
+  padding-bottom: 142px;
+}
+
+.navbar {
+  margin-bottom: 144px;
+}
+.navbar__list {
+  list-style: none;
+  display: flex;
+  gap: 43px;
+}
+.navbar__link {
+  line-height: var(--line-height-lg);
+  letter-spacing: var(--letter-spacing);
+
+  color: var(--color-black);
+}
+.navbar__link--active {
+  font-weight: 500;
+  color: var(--color-primary);
+}
+
+.content {
+  max-width: 540px;
+}
+.content__title {
+  margin: 0 0 34px;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: var(--line-height-lg);
+  color: var(--color-black);
+}
+.content__description {
+  line-height: var(--line-height-lg);
+  color: var(--color-secondary);
+  margin-bottom: 57px;
+}
+.content__link {
+  width: 225px;
+  min-height: 65px;
+  background-color: var(--color-primary);
+
+  line-height: var(--line-height-lg);
+  letter-spacing: var(--letter-spacing);
+  color: var(--color-white);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
 }
