--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   --color-primary: #34547a;
   --color-secondary: #727272;
   --color-gray-light: #eeeff1;
+  --color-gray-light2: #f9f9f9;
   --color-white: #ffffff;
 
   --font-size: 16px;
@@ -10,11 +11,15 @@
   --letter-spacing: 0.1em;
 
   --line-height-lg: 1.625;
-  --line-height-sm: 1.1111111111111111111;
+  --line-height-sm: 1.1875;
 
-  --contaner-primary: 1110px;
-  --contaner-small: 540px;
+  --container-primary: 1110px;
+  --container-small: 540px;
+
+  --gap: 20px;
+  --gap-sm: calc(var(--gap) / 2);
 }
+
 *,
 *::before,
 *::after {
@@ -31,8 +36,25 @@ a {
 }
 
 .container {
-  width: min(100% - 40px, var(--contaner-primary));
+  width: min(100% - 40px, var(--container-primary));
   margin-inline: auto;
+}
+.container--sm {
+  width: min(100% - 40px, var(--container-small));
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .header {
@@ -88,4 +110,73 @@ a {
   justify-content: center;
   align-items: center;
   padding: 0.5em;
+}
+
+.section {
+  padding: 100px 0;
+  background-color: var(--color-gray-light2);
+}
+.section__title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: var(--line-height-sm);
+  text-align: center;
+  margin-bottom: 50px;
+}
+.section__description {
+  line-height: var(--line-height-lg);
+  text-align: center;
+  color: var(--color-secondary);
+}
+
+.experience {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  padding: 100px 0 100px;
+}
+.experience__container {
+  display: flex;
+  gap: var(--gap);
+  justify-content: space-between;
+}
+.experience-item {
+  display: flex;
+  gap: var(--gap);
+  flex-direction: row-reverse;
+  align-items: center;
+}
+.experience-item__number {
+  font-weight: 500;
+  font-size: 21px;
+  line-height: var(--line-height-sm);
+
+  color: #ffffff;
+}
+.experience-item__text {
+  line-height: var(--line-height-lg);
+}
+
+.process__container {
+  margin-bottom: 50px;
+}
+.process__video {
+  width: 100%;
+  height: 600px;
+  border: 0;
+}
+
+.footer {
+  padding: 50px 0;
+  color: var(--color-white);
+  background-color: var(--color-primary);
+}
+.footer__name {
+  font-weight: 500;
+  font-size: 21px;
+  line-height: var(--line-height-sm);
+  margin-bottom: var(--gap-sm);
+}
+.footer__copyright {
+  font-size: 13px;
+  line-height: var(--line-height-lg);
 }
